# page_rank

./: .gitignore  CMakeLists.txt  Makefile  Matrix.hpp  README.md  códigosMatricesCuali  leeme.txt  main  main.cpp  test.txt  tp1_metodos.cbp
cuantitative_tests/: Untitled.ipynb  run_exp_and_compare_error.ipynb
cuantitative_tests/.ipynb_checkpoints/: run_exp_and_compare_error-checkpoint.ipynb
data/: CMakeLists.txt  correrExp  cualitativo  exp_cualitativo.cpp  pokematrix_attacking.txt  pokematrix_defending.txt  pokematrix_resistant.txt  randomMatrix.cpp  randomMatrix.h  resultados pokemon atacando  resultados pokemon defensor  run_exp.cpp  sparseRandomMatrix.cpp  sparseRandomMatrix.hpp  sparse_run_exp.cpp
data/Raw Data and results/: .process_poketypes.py.swp  process_data.py  resultados pokemon atacando  resultados pokemon defensor
data/results/: resumencito.xls
docs/report/: .idea  README.md  corrections.txt  (+2 more)
report/: Makefile  README.md  report.tex
scripts/: cmake_clean.sh  dl-files.sh
src/: Matrix.cpp  Matrix.hpp  Solvers.cpp  Solvers.hpp  Sparse_matrix.cpp  Sparse_matrix.hpp  Sparse_matrix_2.cpp  Sparse_matrix_2.hpp  Sparse_matrix_vom.cpp  Sparse_matrix_vom.hpp  Sparse_solvers.cpp  Sparse_solvers.hpp  empy_file.cpp  page_rank.cpp  page_rank.h  sparse_page_rank.cpp  sparse_page_rank.h
test/: CMakeLists.txt  Makefile  Matrix_test.cpp  Solver_test.cpp  Sparse_matrix_test.cpp  Sparse_solver_test.cpp  correrTests  example_test.cpp  generateRandomMatrix.py  page_rank_test.cpp  resul_filtered.txt  resul_filtered2.txt  resul_filtered_new.txt  sparse_page_rank_test.cpp  test_pseudo_15_segs.txt  tests.cpp
(+34 files in other folders)
